--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
-  "name": "react-native-singledirection-scrollview",
-  "title": "React Native Single Direction Scrollview",
-  "version": "0.0.3",
-  "description": "A scrollview doesn't intercept touch event while the user is try to scroll horizontal. ",
+  "name": "react-native-nested-scrollview",
+  "title": "React Native Netsted Scrollview",
+  "version": "0.0.4",
+  "description": "An scrollview(Android only) provide smoothly scroll experience for nested ScrollView. ",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Changdao/react-native-singledirection-scrollview.git",
-    "baseUrl": "https://github.com/Changdao/react-native-singledirection-scrollview"
+    "url": "git+https://github.com/Changdao/react-native-nested-scrollview.git",
+    "baseUrl": "https://github.com/Changdao/react-native-nested-scrollview"
   },
   "keywords": [
     "react-native",
